# security-workshop

./: .tool-versions  LICENSE  README.md  build-deploy
.github/workflows/: shipit.yaml
data/: Dockerfile  descriptions.json  entrypoint.sh  postgres-data.sql  schema.sql
data/bank_db/: transactions.json  users.json
kubernetes/: api-certificate.yaml  api-gateway.yaml  api.yaml  certificate.yaml  efk-manifests.yaml  fail2ban.yaml  ingress-certificate.yaml  jumpwire.yaml  postgres-certificate.yaml  postgres.yaml  reconciler.yaml  traefik-config.yaml  traefik-jwt.yaml
src/api/: Dockerfile  app.js  database.js  logger.js  models.js  package.json
src/api/config/: custom-environment-variables.json  default.js  default.json
src/api/routes/: index.js  transactions.js  users.js
src/reconciler/: Cargo.toml  Dockerfile  settings.json
src/reconciler/src/: main.rs
