[package]
name = "reconciler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
config = "0.13.3"
itertools = "0.11.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.176", features = ["serde_derive"] }
url = "2.4.0"
